--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.cpp" "modules/gatt_client/gatt_client.cpp"
-                    INCLUDE_DIRS "." "modules/gatt_client")
+idf_component_register(SRCS "main.cpp" "modules/gatt_client/gatt_client.cpp" "modules/wifi/wifi_manager.cpp"
+                    INCLUDE_DIRS "." "modules/gatt_client" "modules/wifi")
