Separate button logic as part of input handling

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,21 @@
-idf_component_register(SRCS "main.cpp" "modules/gatt_client/gatt_client.cpp" "modules/gatt_server/gatt_server.cpp" "modules/http_server/http_server.cpp" "modules/wifi/wifi_manager.cpp" "modules/utils/utils.cpp" "modules/mqtt/mqtt_manager.cpp" "modules/input_handler/input_handler.cpp"
-                    INCLUDE_DIRS "." "modules/gatt_client" "modules/gatt_server" "modules/wifi" "modules/utils" "modules/http_server" "modules/mqtt" "modules/input_handler")
+idf_component_register(
+    SRCS 
+        "main.cpp" 
+        "modules/gatt_client/gatt_client.cpp" 
+        "modules/gatt_server/gatt_server.cpp" 
+        "modules/http_server/http_server.cpp" 
+        "modules/wifi/wifi_manager.cpp" 
+        "modules/utils/utils.cpp" 
+        "modules/mqtt/mqtt_manager.cpp" 
+        "modules/input/input.cpp"
+        "modules/input/button.cpp"
+    INCLUDE_DIRS 
+        "." 
+        "modules/gatt_client" 
+        "modules/gatt_server" 
+        "modules/wifi" 
+        "modules/utils" 
+        "modules/http_server" 
+        "modules/mqtt" 
+        "modules/input"
+)
