--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -11,6 +11,7 @@ idf_component_register(
         "modules/input/button.cpp"
         "modules/input/encoder.cpp"
         "modules/input/potentiometer.cpp"
+        "modules/input/ir.cpp"
     INCLUDE_DIRS 
         "." 
         "modules/gatt_client" 
