Led strip lib works

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,6 +1,7 @@
 file(GLOB_RECURSE SRC_FILES 
     "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/modules/*.cpp"    
+    "${CMAKE_CURRENT_SOURCE_DIR}/modules/*.c"    
 )
 
 idf_component_register(
