--- a/client/.gitignore
+++ b/client/.gitignore
@@ -30,224 +30,5 @@
 *.exe
 *.out
 *.app
-build/.bin_timestamp
-build/.ninja_deps
-build/.ninja_log
-build/app-flash_args
-build/bootloader-flash_args
-build/build.ninja
-build/cmake_install.cmake
-build/CMakeCache.txt
-build/compile_commands.json
-build/config.env
-build/flash_app_args
-build/flash_args
-build/flash_args.in
-build/flash_bootloader_args
-build/flash_project_args
-build/flasher_args.json
-build/kconfigs_projbuild.in
-build/kconfigs.in
-build/ldgen_libraries
-build/ldgen_libraries.in
-build/LEDSync.bin
-build/LEDSync.elf
-build/LEDSync.map
-build/partition-table-flash_args
-build/project_description.json
-build/project_elf_src_esp32.c
-build/x509_crt_bundle.S
-build/CMakeFiles/bootloader-complete
-build/CMakeFiles/clean_additional.cmake
-build/CMakeFiles/cmake.check_cache
-build/CMakeFiles/CMakeConfigureLog.yaml
-build/CMakeFiles/rules.ninja
-build/CMakeFiles/TargetDirectories.txt
-build/CMakeFiles/3.30.2/CMakeASMCompiler.cmake
-build/CMakeFiles/3.30.2/CMakeCCompiler.cmake
-build/CMakeFiles/3.30.2/CMakeCXXCompiler.cmake
-build/CMakeFiles/3.30.2/CMakeDetermineCompilerABI_C.bin
-build/CMakeFiles/3.30.2/CMakeDetermineCompilerABI_CXX.bin
-build/CMakeFiles/3.30.2/CMakeSystem.cmake
-build/CMakeFiles/3.30.2/CompilerIdC/CMakeCCompilerId.c
-build/CMakeFiles/3.30.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
-build/CMakeFiles/CheckTypeSize/TIME_T_SIZE.bin
-build/CMakeFiles/bootloader.dir/Labels.json
-build/CMakeFiles/bootloader.dir/Labels.txt
-build/CMakeFiles/git-data/grabRef.cmake
-build/CMakeFiles/git-data/HEAD
-build/CMakeFiles/git-data/head-ref
-build/bootloader/.bin_timestamp
-build/bootloader/.ninja_deps
-build/bootloader/.ninja_log
-build/bootloader/bootloader.bin
-build/bootloader/bootloader.elf
-build/bootloader/bootloader.map
-build/bootloader/build.ninja
-build/bootloader/cmake_install.cmake
-build/bootloader/CMakeCache.txt
-build/bootloader/compile_commands.json
-build/bootloader/config.env
-build/bootloader/kconfigs_projbuild.in
-build/bootloader/kconfigs.in
-build/bootloader/project_description.json
-build/bootloader/project_elf_src_esp32.c
-build/bootloader/CMakeFiles/clean_additional.cmake
-build/bootloader/CMakeFiles/cmake.check_cache
-build/bootloader/CMakeFiles/CMakeConfigureLog.yaml
-build/bootloader/CMakeFiles/rules.ninja
-build/bootloader/CMakeFiles/TargetDirectories.txt
-build/bootloader/CMakeFiles/3.30.2/CMakeASMCompiler.cmake
-build/bootloader/CMakeFiles/3.30.2/CMakeCCompiler.cmake
-build/bootloader/CMakeFiles/3.30.2/CMakeCXXCompiler.cmake
-build/bootloader/CMakeFiles/3.30.2/CMakeDetermineCompilerABI_C.bin
-build/bootloader/CMakeFiles/3.30.2/CMakeDetermineCompilerABI_CXX.bin
-build/bootloader/CMakeFiles/3.30.2/CMakeSystem.cmake
-build/bootloader/CMakeFiles/3.30.2/CompilerIdC/CMakeCCompilerId.c
-build/bootloader/CMakeFiles/3.30.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
-build/bootloader/CMakeFiles/CheckTypeSize/TIME_T_SIZE.bin
-build/bootloader/CMakeFiles/git-data/grabRef.cmake
-build/bootloader/CMakeFiles/git-data/HEAD
-build/bootloader/CMakeFiles/git-data/head-ref
-build/bootloader/config/kconfig_menus.json
-build/bootloader/config/sdkconfig.cmake
-build/bootloader/config/sdkconfig.h
-build/bootloader/config/sdkconfig.json
-build/bootloader/esp-idf/cmake_install.cmake
-build/bootloader/esp-idf/bootloader/cmake_install.cmake
-build/bootloader/esp-idf/bootloader_support/cmake_install.cmake
-build/bootloader/esp-idf/efuse/cmake_install.cmake
-build/bootloader/esp-idf/esp_app_format/cmake_install.cmake
-build/bootloader/esp-idf/esp_common/cmake_install.cmake
-build/bootloader/esp-idf/esp_hw_support/cmake_install.cmake
-build/bootloader/esp-idf/esp_hw_support/port/esp32/cmake_install.cmake
-build/bootloader/esp-idf/esp_rom/cmake_install.cmake
-build/bootloader/esp-idf/esp_system/cmake_install.cmake
-build/bootloader/esp-idf/esptool_py/cmake_install.cmake
-build/bootloader/esp-idf/freertos/cmake_install.cmake
-build/bootloader/esp-idf/hal/cmake_install.cmake
-build/bootloader/esp-idf/log/cmake_install.cmake
-build/bootloader/esp-idf/main/cmake_install.cmake
-build/bootloader/esp-idf/micro-ecc/cmake_install.cmake
-build/bootloader/esp-idf/newlib/cmake_install.cmake
-build/bootloader/esp-idf/partition_table/cmake_install.cmake
-build/bootloader/esp-idf/soc/cmake_install.cmake
-build/bootloader/esp-idf/spi_flash/cmake_install.cmake
-build/bootloader/esp-idf/xtensa/cmake_install.cmake
-build/bootloader-prefix/src/bootloader-stamp/bootloader-configure
-build/bootloader-prefix/src/bootloader-stamp/bootloader-done
-build/bootloader-prefix/src/bootloader-stamp/bootloader-download
-build/bootloader-prefix/src/bootloader-stamp/bootloader-mkdir
-build/bootloader-prefix/src/bootloader-stamp/bootloader-patch
-build/bootloader-prefix/src/bootloader-stamp/bootloader-patch-info.txt
-build/bootloader-prefix/src/bootloader-stamp/bootloader-source_dirinfo.txt
-build/bootloader-prefix/src/bootloader-stamp/bootloader-update
-build/bootloader-prefix/src/bootloader-stamp/bootloader-update-info.txt
-build/bootloader-prefix/tmp/bootloader-cfgcmd.txt
-build/bootloader-prefix/tmp/bootloader-mkdirs.cmake
-build/config/kconfig_menus.json
-build/config/sdkconfig.cmake
-build/config/sdkconfig.h
-build/config/sdkconfig.json
-build/esp-idf/cmake_install.cmake
-build/esp-idf/app_trace/cmake_install.cmake
-build/esp-idf/app_update/cmake_install.cmake
-build/esp-idf/bootloader/bootloader-flash_args.in
-build/esp-idf/bootloader/cmake_install.cmake
-build/esp-idf/bootloader_support/cmake_install.cmake
-build/esp-idf/bt/cmake_install.cmake
-build/esp-idf/cmock/cmake_install.cmake
-build/esp-idf/console/cmake_install.cmake
-build/esp-idf/cxx/cmake_install.cmake
-build/esp-idf/driver/cmake_install.cmake
-build/esp-idf/efuse/cmake_install.cmake
-build/esp-idf/esp-tls/cmake_install.cmake
-build/esp-idf/esp_adc/cmake_install.cmake
-build/esp-idf/esp_app_format/cmake_install.cmake
-build/esp-idf/esp_coex/cmake_install.cmake
-build/esp-idf/esp_common/cmake_install.cmake
-build/esp-idf/esp_eth/cmake_install.cmake
-build/esp-idf/esp_event/cmake_install.cmake
-build/esp-idf/esp_gdbstub/cmake_install.cmake
-build/esp-idf/esp_hid/cmake_install.cmake
-build/esp-idf/esp_http_client/cmake_install.cmake
-build/esp-idf/esp_http_server/cmake_install.cmake
-build/esp-idf/esp_https_ota/cmake_install.cmake
-build/esp-idf/esp_https_server/cmake_install.cmake
-build/esp-idf/esp_hw_support/cmake_install.cmake
-build/esp-idf/esp_hw_support/port/esp32/cmake_install.cmake
-build/esp-idf/esp_lcd/cmake_install.cmake
-build/esp-idf/esp_local_ctrl/cmake_install.cmake
-build/esp-idf/esp_mm/cmake_install.cmake
-build/esp-idf/esp_netif/cmake_install.cmake
-build/esp-idf/esp_netif_stack/cmake_install.cmake
-build/esp-idf/esp_partition/cmake_install.cmake
-build/esp-idf/esp_phy/cmake_install.cmake
-build/esp-idf/esp_pm/cmake_install.cmake
-build/esp-idf/esp_psram/cmake_install.cmake
-build/esp-idf/esp_ringbuf/cmake_install.cmake
-build/esp-idf/esp_rom/cmake_install.cmake
-build/esp-idf/esp_system/cmake_install.cmake
-build/esp-idf/esp_system/ld/memory.ld
-build/esp-idf/esp_system/ld/sections.ld
-build/esp-idf/esp_system/port/cmake_install.cmake
-build/esp-idf/esp_system/port/soc/esp32/cmake_install.cmake
-build/esp-idf/esp_timer/cmake_install.cmake
-build/esp-idf/esp_wifi/cmake_install.cmake
-build/esp-idf/espcoredump/cmake_install.cmake
-build/esp-idf/esptool_py/app-flash_args.in
-build/esp-idf/esptool_py/cmake_install.cmake
-build/esp-idf/esptool_py/flasher_args.json.in
-build/esp-idf/fatfs/cmake_install.cmake
-build/esp-idf/freertos/cmake_install.cmake
-build/esp-idf/hal/cmake_install.cmake
-build/esp-idf/heap/cmake_install.cmake
-build/esp-idf/http_parser/cmake_install.cmake
-build/esp-idf/idf_test/cmake_install.cmake
-build/esp-idf/ieee802154/cmake_install.cmake
-build/esp-idf/json/cmake_install.cmake
-build/esp-idf/log/cmake_install.cmake
-build/esp-idf/lwip/cmake_install.cmake
-build/esp-idf/main/cmake_install.cmake
-build/esp-idf/mbedtls/cmake_install.cmake
-build/esp-idf/mbedtls/x509_crt_bundle
-build/esp-idf/mbedtls/mbedtls/cmake_install.cmake
-build/esp-idf/mbedtls/mbedtls/3rdparty/cmake_install.cmake
-build/esp-idf/mbedtls/mbedtls/3rdparty/everest/cmake_install.cmake
-build/esp-idf/mbedtls/mbedtls/3rdparty/p256-m/cmake_install.cmake
-build/esp-idf/mbedtls/mbedtls/include/cmake_install.cmake
-build/esp-idf/mbedtls/mbedtls/library/cmake_install.cmake
-build/esp-idf/mbedtls/mbedtls/library/error.c
-build/esp-idf/mbedtls/mbedtls/library/psa_crypto_driver_wrappers_no_static.c
-build/esp-idf/mbedtls/mbedtls/library/ssl_debug_helpers_generated.c
-build/esp-idf/mbedtls/mbedtls/library/version_features.c
-build/esp-idf/mbedtls/mbedtls/pkgconfig/cmake_install.cmake
-build/esp-idf/mqtt/cmake_install.cmake
-build/esp-idf/newlib/cmake_install.cmake
-build/esp-idf/newlib/port/cmake_install.cmake
-build/esp-idf/nvs_flash/cmake_install.cmake
-build/esp-idf/openthread/cmake_install.cmake
-build/esp-idf/partition_table/cmake_install.cmake
-build/esp-idf/partition_table/partition-table-flash_args.in
-build/esp-idf/perfmon/cmake_install.cmake
-build/esp-idf/protobuf-c/cmake_install.cmake
-build/esp-idf/protocomm/cmake_install.cmake
-build/esp-idf/pthread/cmake_install.cmake
-build/esp-idf/sdmmc/cmake_install.cmake
-build/esp-idf/soc/cmake_install.cmake
-build/esp-idf/spi_flash/cmake_install.cmake
-build/esp-idf/spiffs/cmake_install.cmake
-build/esp-idf/tcp_transport/cmake_install.cmake
-build/esp-idf/ulp/cmake_install.cmake
-build/esp-idf/unity/cmake_install.cmake
-build/esp-idf/usb/cmake_install.cmake
-build/esp-idf/vfs/cmake_install.cmake
-build/esp-idf/wear_levelling/cmake_install.cmake
-build/esp-idf/wifi_provisioning/cmake_install.cmake
-build/esp-idf/wpa_supplicant/cmake_install.cmake
-build/esp-idf/xtensa/cmake_install.cmake
-build/log/idf_py_stderr_output_16780
-build/log/idf_py_stderr_output_39556
-build/log/idf_py_stdout_output_16780
-build/log/idf_py_stdout_output_39556
-build/partition_table/partition-table.bin
+
+build/
